--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,9 +6,23 @@ pipelines:
         name: 'default'
         script:
             - echo 'only running CI on ITOPS branches for now'
+definitions:
+  steps:
+    - step: &run_taskcat
+      - apk update
+      - pip --no-cache-dir install awscli taskcat
+      - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
+      - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
+      - aws configure set default.region ${CI_DEFAULT_REGION}
+      - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
+      - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
+      - cd quickstarts/${QS_PROJECT_NAME}
+      - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
+      - cat ci/taskcat_project_override.json
+      - taskcat -c ci/taskcat.yml
   branches:
-    'ITOPS-*': &ci_pipeline
-        - step: &setup_step
+    'ITOPS-*':
+        - step:
             name: Build Atlassian Services AWS Environment (VPC + tooling) from quickstart (if doesnt exist)
             script:
               - export CIHOME=$(pwd)
@@ -252,7 +266,6 @@ pipelines:
               - aws cloudformation delete-stack --stack-name $MASTERSTACK
     'DCD-*':
         - step:
-                #<<: *setup_step
             name: Setup VPC & other services if they do not exist'
             image: python:3.6-alpine
             script:
@@ -263,12 +276,7 @@ pipelines:
               - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
               - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
               - aws configure set default.region ${CI_DEFAULT_REGION}
-              #- aws configure set default.region ${CI_DEFAULT_REGION}
-              # you can also override region manually, if needed, on the line below
-              # - aws configure set default.region us-east-2
-              # - export AWS_SECRET_KEY=${CI_SECRET_ACCESS_KEY}
-              # - export AWS_ACCESS_KEY=${CI_ACCESS_KEY_ID}
-
+              # Has masterstack been deployed?
               - export MASTERSTACK=$(aws cloudformation list-stacks --stack-status-filter CREATE_COMPLETE UPDATE_COMPLETE | jq '.StackSummaries'|jq -r '.[]| select(.TemplateDescription=="Master Template for Atlassian Services")|.StackName')
               - if [ -z "$MASTERSTACK" ]; then export MASTERSTACK="ATL";fi
               - echo $MASTERSTACK
@@ -280,7 +288,7 @@ pipelines:
               # Validate Template
               - aws cloudformation validate-template --template-url https://s3.amazonaws.com/quickstart-taskcat-ci/quickstarts/${BITBUCKET_BUILD_NUMBER}/quickstart-vpc-for-atlassian-services.yaml
               - aws cloudformation validate-template --template-url https://s3.amazonaws.com/quickstart-taskcat-ci/quickstarts/${BITBUCKET_BUILD_NUMBER}/quickstart-bastion-for-atlassian-services.yaml
-
+              # Won't run as parameters do not match. Won't fix - Will use taskcat to setup VPC and bastion with submodules
               - if [ ! -e "vpcExists" ]; then aws --debug cloudformation create-stack --stack-name "${MASTERSTACK}" --template-url https://s3.amazonaws.com/quickstart-taskcat-ci/quickstarts/${BITBUCKET_BUILD_NUMBER}/quickstart-vpc-for-atlassian-services.yaml --capabilities CAPABILITY_IAM --on-failure DELETE --parameters  file://ci-parameters-vpc-stack.json --tags "Key=Name,Value=taskcat-ci-user" "Key=service_name,Value=taskcat-ci-user" "Key=business_unit,Value=Engineering:Server" "Key=resource_owner,Value=abrokes"; fi
               - if [ ! -e "vpcExists" ]; then aws --debug cloudformation wait stack-create-complete --stack-name "${MASTERSTACK}"; fi
               # is bastion listening for ssh ?
@@ -288,50 +296,22 @@ pipelines:
               - export BASTIONIP=$(aws cloudformation describe-stacks --stack-name=$BASTIONSTACK | jq '.Stacks[0].Outputs'|jq '.[] | select(.OutputKey=="BastionPubIp")|.OutputValue'|tr -d '"')
               - echo $BASTIONIP
               - nc -n -w3 -z $BASTIONIP 22
-      #        Duplication ahead
         - parallel:
           - step:
               name: Taskcat run jira
               image: python:3.6-alpine
               script:
-                  - apk update
-                  - pip --no-cache-dir install awscli taskcat
-                  - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
-                  - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
-                  - aws configure set default.region ${CI_DEFAULT_REGION}
-                  - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
-                  - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-                  - cd quickstarts/jira
-                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
-                  - cat ci/taskcat_project_override.json
-                  - taskcat -c ci/taskcat.yml
+                - export QS_PROJECT_NAME=jira
+                - *run_taskcat
           - step:
               name: Taskcat run confluence
               image: python:3.6-alpine
               script:
-                  - apk update
-                  - pip --no-cache-dir install awscli taskcat
-                  - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
-                  - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
-                  - aws configure set default.region ${CI_DEFAULT_REGION}
-                  - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
-                  - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-                  - cd quickstarts/confluence
-                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
-                  - cat ci/taskcat_project_override.json
-                  - taskcat -c ci/taskcat.yml
+                - export QS_PROJECT_NAME=confluence
+                - *run_taskcat
           - step:
               name: Taskcat run bitbucket
               image: python:3.6-alpine
               script:
-                  - apk update
-                  - pip --no-cache-dir install awscli taskcat
-                  - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
-                  - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
-                  - aws configure set default.region ${CI_DEFAULT_REGION}
-                  - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
-                  - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-                  - cd quickstarts/bitbucket
-                  - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
-                  - cat ci/taskcat_project_override.json
-                  - taskcat -c ci/taskcat.yml
+                  - export QS_PROJECT_NAME=bitbucket
+                  - *run_taskcat
