--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -287,7 +287,7 @@ pipelines:
               name: Taskcat run jira
               image: python:3.6-alpine
               script:
-              - export QS_PROJECT_NAME=jira
+              - export QS_PROJECT_NAME=quickstart-atlassian-jira
               - apk update
               - pip --no-cache-dir install awscli taskcat
               - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
@@ -295,15 +295,18 @@ pipelines:
               - aws configure set default.region ${CI_DEFAULT_REGION}
               - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-              - cd quickstarts/${QS_PROJECT_NAME}
+              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
+              - cd quickstarts
+              - cp -r ./ci/jira/* ./${QS_PROJECT_NAME}/ci/
+              - cd ${QS_PROJECT_NAME}
               - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
               - cat ci/taskcat_project_override.json
-              - taskcat -c ci/taskcat.yml
+              - taskcat -c ci/taskcat-ci.yml
           - step:
               name: Taskcat run confluence
               image: python:3.6-alpine
               script:
-              - export QS_PROJECT_NAME=confluence
+              - export QS_PROJECT_NAME=quickstart-atlassian-confluence
               - apk update
               - pip --no-cache-dir install awscli taskcat
               - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
@@ -311,16 +314,19 @@ pipelines:
               - aws configure set default.region ${CI_DEFAULT_REGION}
               - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-              - cd quickstarts/${QS_PROJECT_NAME}
+              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
+              - cd quickstarts
+              - cp -r ./ci/confluence/* ./${QS_PROJECT_NAME}/ci/
+              - cd ${QS_PROJECT_NAME}
               - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
               - cat ci/taskcat_project_override.json
-              - taskcat -c ci/taskcat.yml
+              - taskcat -c ci/taskcat-ci.yml
 
           - step:
               name: Taskcat run bitbucket
               image: python:3.6-alpine
               script:
-              - export QS_PROJECT_NAME=bitbucket
+              - export QS_PROJECT_NAME=quickstart-atlassian-bitbucket
               - apk update
               - pip --no-cache-dir install awscli taskcat
               - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
@@ -328,8 +334,11 @@ pipelines:
               - aws configure set default.region ${CI_DEFAULT_REGION}
               - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
-              - cd quickstarts/${QS_PROJECT_NAME}
+              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
+              - cd quickstarts
+              - cp -r ./ci/bitbucket/* ./${QS_PROJECT_NAME}/ci/
+              - cd ${QS_PROJECT_NAME}
               - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
               - cat ci/taskcat_project_override.json
-              - taskcat -c ci/taskcat.yml
+              - taskcat -c ci/taskcat-ci.yml
 
