--- a/quickstarts/ci/jira/taskcat-ci.yml
+++ b/quickstarts/ci/jira/taskcat-ci.yml
@@ -2,6 +2,7 @@
 global:
   marketplace-ami: false
   owner: quickstart-eng@amazon.com
+  #owner: dc-deployments-syd@atlassian.com
   qsname: jira
   regions:
     - us-east-2
@@ -9,5 +10,5 @@ global:
 
 tests:
   jira:
-    parameter_input: quickstart-jira-dc-params.json
-    template_file: quickstart-jira-master.template.yaml
+    parameter_input: quickstart-jira-dc-ci.json
+    template_file: JiraDataCenter.template.yaml
