--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -296,6 +296,8 @@ pipelines:
               - aws configure set default.region ${CI_DEFAULT_REGION}
               - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
+              - mkdir -p ~/.ssh
+              - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
               - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
               - cd quickstarts
               - cp -r ./ci/jira/* ./${QS_PROJECT_NAME}/ci/
@@ -316,6 +318,8 @@ pipelines:
               - aws configure set default.region ${CI_DEFAULT_REGION}
               - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
+              - mkdir -p ~/.ssh
+              - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
               - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
               - cd quickstarts
               - cp -r ./ci/confluence/* ./${QS_PROJECT_NAME}/ci/
@@ -337,6 +341,8 @@ pipelines:
               - aws configure set default.region ${CI_DEFAULT_REGION}
               - export AWS_SECRET_KEY=${TASKCAT_SECRET_ACCESS_KEY}
               - export AWS_ACCESS_KEY=${TASKCAT_ACCESS_KEY_ID}
+              - mkdir -p ~/.ssh
+              - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
               - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
               - cd quickstarts
               - cp -r ./ci/bitbucket/* ./${QS_PROJECT_NAME}/ci/
