DCD-50 Nonrecursively fetches submodules

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -299,7 +299,7 @@ pipelines:
               - mkdir -p ~/.ssh
               - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
               - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
-              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
+              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
               - cd quickstarts
               - cp -r ./ci/jira/* ./${QS_PROJECT_NAME}/ci/
               - cd ${QS_PROJECT_NAME}
@@ -322,7 +322,7 @@ pipelines:
               - mkdir -p ~/.ssh
               - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
               - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
-              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
+              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
               - cd quickstarts
               - cp -r ./ci/confluence/* ./${QS_PROJECT_NAME}/ci/
               - cd ${QS_PROJECT_NAME}
@@ -346,7 +346,7 @@ pipelines:
               - mkdir -p ~/.ssh
               - echo -e "Host *\n StrictHostKeyChecking no\n UserKnownHostsFile=/dev/null" > ~/.ssh/config
               - (umask  077 ; echo ${CI_TASKCAT_USER_GITHUB_PRIVATE_KEY} | base64 -d > ~/.ssh/id_rsa)
-              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap
+              - chmod 744 ./scripts/bootstrap && ./scripts/bootstrap --no-recurse
               - cd quickstarts
               - cp -r ./ci/bitbucket/* ./${QS_PROJECT_NAME}/ci/
               - cd ${QS_PROJECT_NAME}
