DCD-50 Updates template file extension in taskcat configuration

--- a/quickstarts/ci/confluence/taskcat-ci.yml
+++ b/quickstarts/ci/confluence/taskcat-ci.yml
@@ -11,4 +11,4 @@ global:
 tests:
   confluence:
     parameter_input: quickstart-confluence-ci.json
-    template_file: ConfluenceDataCenter.template.yaml
+    template_file: ConfluenceDataCenter.template
