--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "quickstarts/quickstart-atlassian-bitbucket"]
 	path = quickstarts/quickstart-atlassian-bitbucket
-	url = https://github.com/atlassian/quickstart-atlassian-bitbucket.git
+	url = git://github.com/atlassian/quickstart-atlassian-bitbucket.git
 	branch = develop
 [submodule "quickstarts/quickstart-atlassian-confluence"]
 	path = quickstarts/quickstart-atlassian-confluence
-	url = https://github.com/atlassian/quickstart-atlassian-confluence.git
+	url = git://github.com/atlassian/quickstart-atlassian-confluence.git
 	branch = develop
 [submodule "quickstarts/quickstart-atlassian-jira"]
 	path = quickstarts/quickstart-atlassian-jira
-	url = https://github.com/atlassian/quickstart-atlassian-jira.git
+	url = git://github.com/atlassian/quickstart-atlassian-jira.git
 	branch = develop
