DCD-50 Uses sumbodule project name as qs name in taskcat

--- a/quickstarts/ci/bitbucket/taskcat-ci.yml
+++ b/quickstarts/ci/bitbucket/taskcat-ci.yml
@@ -1,6 +1,6 @@
 ---
 global:
-  qsname: bitbucket
+  qsname: quickstart-atlassian-bitbucket
   owner: varbatti@atlassian.com
   #owner: dc-deployments-syd@atlassian.com
   marketplace-ami: false
