--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -305,7 +305,9 @@ pipelines:
               - cd ${QS_PROJECT_NAME}
               - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
               - cat ci/taskcat_project_override.json
-              - taskcat -c ci/taskcat-ci.yml
+              - taskcat -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-${BITBUCKET_BUILD_NUMBER}
+              artifacts:
+                - quickstarts/quickstart-atlassian-jira/taskcat_outputs/*
           - step:
               name: Taskcat run confluence
               image: python:3.6-alpine
@@ -328,8 +330,9 @@ pipelines:
               - cd ${QS_PROJECT_NAME}
               - echo "[{\"ParameterKey\":\"KeyName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
               - cat ci/taskcat_project_override.json
-              - taskcat -c ci/taskcat-ci.yml
-
+              - taskcat -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-${BITBUCKET_BUILD_NUMBER}
+              artifacts:
+                - quickstarts/quickstart-atlassian-confluence/taskcat_outputs/*
           - step:
               name: Taskcat run bitbucket
               image: python:3.6-alpine
@@ -352,5 +355,6 @@ pipelines:
               - cd ${QS_PROJECT_NAME}
               - echo "[{\"ParameterKey\":\"KeyPairName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
               - cat ci/taskcat_project_override.json
-              - taskcat -c ci/taskcat-ci.yml
-
+              - taskcat -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-${BITBUCKET_BUILD_NUMBER}
+              artifacts:
+                - quickstarts/quickstart-atlassian-bitbucket/taskcat_outputs/*
