--- a/quickstarts/quickstart-backmac-for-atlassian-services.yaml
+++ b/quickstarts/quickstart-backmac-for-atlassian-services.yaml
@@ -1586,7 +1586,7 @@ Resources:
               - "yum -y update aws-cfn-bootstrap\n"
               - "yum -y install nfs-utils amazon-efs-utils nvme-cli\n"
               - "yum -y install https://rpmfind.net/linux/fedora/linux/development/rawhide/Everything/x86_64/os/Packages/r/rsync-3.1.3-5.fc30.x86_64.rpm\n"
-              - !Sub ["/usr/bin/aws s3 cp s3://wpe-backmac-deployment-${AccountId}-${Region}/parallel_sync /usr/local/bin/parallel_sync\n", {Region: !Ref "AWS::Region", AccountId: !Ref "AWS::AccountId"}]
+              - !Sub ["/usr/bin/aws s3 cp s3://atlassian-aws-lambdaresources-${Region}/${S3LambdaBucketFolder}/parallel_sync /usr/local/bin/parallel_sync\n", {Region: !Ref "AWS::Region", AccountId: !Ref "AWS::AccountId"}]
               - "chmod u+x /usr/local/bin/parallel_sync\n"
               - !Sub ["/opt/aws/bin/cfn-init -v --stack ${StackName}", {StackName: !Ref "AWS::StackName"}]
               - !Sub [" --resource BackmacNode --region ${Region}\n", {Region: !Ref "AWS::Region"}]
