--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -292,7 +292,7 @@ pipelines:
               script:
                 - export QS_PROJECT_NAME=quickstart-atlassian-jira
                 - apk update
-                - apk --no-cache add jq openssh git groff
+                - apk --no-cache add jq openssh git groff curl
                 - pip --no-cache-dir install awscli taskcat
                 - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
                 - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
@@ -317,7 +317,7 @@ pipelines:
               script:
                 - export QS_PROJECT_NAME=quickstart-atlassian-confluence
                 - apk update
-                - apk --no-cache add jq openssh git groff
+                - apk --no-cache add jq openssh git groff curl
                 - pip --no-cache-dir install awscli taskcat
                 - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
                 - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
@@ -342,7 +342,7 @@ pipelines:
               script:
                 - export QS_PROJECT_NAME=quickstart-atlassian-bitbucket
                 - apk update
-                - apk --no-cache add jq openssh git groff
+                - apk --no-cache add jq openssh git groff curl
                 - pip --no-cache-dir install awscli taskcat
                 - aws configure set default.aws_secret_access_key ${TASKCAT_SECRET_ACCESS_KEY}
                 - aws configure set default.aws_access_key_id ${TASKCAT_ACCESS_KEY_ID}
@@ -359,12 +359,12 @@ pipelines:
                 - echo "[{\"ParameterKey\":\"KeyPairName\",\"ParameterValue\":\"$TASKCAT_KEYPAIR_NAME\"}]" > ci/taskcat_project_override.json
                 - cat ci/taskcat_project_override.json
                 - taskcat -n -c ci/taskcat-ci.yml -t taskcat-ci-run=true -t taskcat-ci-run-id=tcat-bitbucket-${BITBUCKET_BUILD_NUMBER} -t override_periodic_cleanup=true
+                - export STACK_NAME=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-bitbucket-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0] | .StackName' | tr -d '"')
                 - export SERVICE_URL=$(aws cloudformation describe-stacks  | jq -c --arg build_tag_id "tcat-bitbucket-${BITBUCKET_BUILD_NUMBER}" '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == $build_tag_id))) | .[0].Outputs | .[] | select (.OutputKey=="ServiceURL") | .OutputValue' | tr -d '"')
-#                - export TGARN=$(aws cloudformation describe-stacks  | jq -c '.Stacks | map( select( any(.Tags[]; .Key=="taskcat-ci-run-id" and .Value == "tcat-bitbucket-${BITBUCKET_BUILD_NUMBER}"))) | .[0].Outputs | select(.OutputKey=="ConfluenceTargetGroupARN")|.OutputValue'|tr -d '"'')
-#                - echo $TGARN
-#                - aws elbv2 wait target-in-service --target-group-arn $TGARN
+                - export ELB_NAME=$(aws cloudformation describe-stack-resources --stack-name "${STACK_NAME}" | jq -c '.StackResources | .[] | select(.LogicalResourceId=="LoadBalancer") | .PhysicalResourceId' | tr -d '"')
+                - echo $ELB_NAME
+                - aws elb wait any-instance-in-service --load-balancer-name $ELB_NAME
                 - echo "${SERVICEURL}"
-                - sleep 30 #Until this code changes to wait
                 - curl --fail ${SERVICEURL}/status
               artifacts:
                 - quickstarts/quickstart-atlassian-bitbucket/taskcat_outputs/*
